finishing touch design part 6 - fixing book-buttom on landing page and spacing in about

--- a/css/style.css
+++ b/css/style.css
@@ -54,16 +54,31 @@ body .btn-box .massage-btn:focus {
 header {
   background-color: #F9F5EC;
 }
-header#header-bg {
+header#header-home {
+  position: relative;
   height: 90vh;
+  height: 85vh;
+}
+@media (min-width: 576px) {
+  header#header-home {
+    height: 90vh;
+  }
+}
+header#header-home #header-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 90vh;
+  width: 100%;
   background-image: url("../media/header_min.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 0.8;
+  z-index: 2;
   height: 85vh;
 }
 @media (min-width: 576px) {
-  header#header-bg {
+  header#header-home #header-bg {
     height: 90vh;
   }
 }
@@ -77,6 +92,7 @@ header .center-flex {
   flex-direction: column;
   text-align: center;
   color: #F9F5EC;
+  z-index: 3;
 }
 header .center-flex img {
   width: 30%;
@@ -95,11 +111,7 @@ header .center-flex h1 {
     font-size: 5rem;
   }
 }
-header .center-flex .btn-box {
-  opacity: 1;
-}
 header .center-flex .btn-box .massage-btn {
-  opacity: 1;
   color: #F9F5EC;
   background-color: #AB6B4F;
   font-size: 0.8rem;
@@ -358,7 +370,7 @@ nav ul li:last-child div:hover {
   }
 }
 #about-henriette .contain {
-  background-image: url("../media/Henriette.jpg");
+  background-image: url("../media/jette-start.jpg");
   background-position: right;
 }
 #about-henriette button {
@@ -370,9 +382,12 @@ nav ul li:last-child div:hover {
 }
 #about h2 {
   font-family: "Montserrat", sans-serif, "Times New Roman", Times, serif;
-  margin-bottom: 0.8rem;
+  margin: 2rem 0 0.8rem;
   font-size: 0.9rem;
   letter-spacing: 8px;
+}
+#about .split-section .content {
+  padding: 35px 5rem;
 }
 #about .split-section h3 {
   margin-bottom: 5rem;
@@ -397,6 +412,9 @@ nav ul li:last-child div:hover {
 #about #more-about-henriette {
   background-color: #CECDAE;
 }
+#about #more-about-henriette .contain {
+  background: center/cover no-repeat url(../media/jette-about.jpg);
+}
 
 .offers {
   padding: 50px 0 100px;
@@ -415,6 +433,7 @@ nav ul li:last-child div:hover {
   font-family: "butler-ultra-light";
   font-size: 3.5rem;
   margin-top: 1rem;
+  letter-spacing: normal;
 }
 .offers .offer {
   margin: 0 0.75rem 3rem;
