--- a/scss/about-henriette.scss
+++ b/scss/about-henriette.scss
@@ -41,7 +41,7 @@
         }    
     }
     .contain{
-        background-image: url("../media/Henriette.jpg");
+        background-image: url("../media/jette-start.jpg");
         background-position: right;
     }
     
