--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,27 +1,36 @@
 header{
     background-color: $white-bg;
-    &#header-bg{
+    &#header-home{
+        position: relative;
         height: 90vh;
-        background-image: url("../media/header_min.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        opacity: .8;
         @include media-breakpoint-up(xs){
             height: 85vh;
         }
         @include media-breakpoint-up(sm){
             height: 90vh;
         }
+        #header-bg{
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 90vh;
+            width: 100%;
+            background-image: url("../media/header_min.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            opacity: .8;
+            z-index: 2;
+            @include media-breakpoint-up(xs){
+                height: 85vh;
+            }
+            @include media-breakpoint-up(sm){
+                height: 90vh;
+            }
+        }
     }
     .center-flex{
         position: relative;
         transform: translateY(-8%);
-        img{
-            width: 30%;
-            @include media-breakpoint-up(lg){
-                width: 12%;
-            }
-        }
         display: flex;
         height: 100%;
         align-items: center;
@@ -29,6 +38,13 @@ header{
         flex-direction: column;
         text-align: center;
         color: $white-bg;
+        z-index: 3;
+        img{
+            width: 30%;
+            @include media-breakpoint-up(lg){
+                width: 12%;
+            }
+        }
         h1{
             font-size: 3rem;
             margin-bottom: 2rem;
@@ -37,9 +53,7 @@ header{
             }
         }
         .btn-box{
-            opacity: 1;
             .massage-btn{
-                opacity: 1;
                 color: $white-bg;
                 background-color: $red-orange;
                 font-size: .8rem;
