--- a/scss/offers.scss
+++ b/scss/offers.scss
@@ -14,6 +14,7 @@
             font-family: 'butler-ultra-light';
             font-size: 3.5rem;
             margin-top: 1rem;
+            letter-spacing: normal;
         }
     }
     .offer{
